# manager-rs

./: .gitignore  Cargo.toml  Cross.toml  build.rs  cargo-run-pi  config.toml  example_config.toml
proto/: docker.proto  manager.proto  memory.proto
src/gui/: config.rs  main.rs  memory.rs  update.rs
src/gui/client/: compose.rs  docker.rs  info.rs  mod.rs
src/gui/state/: compose.rs  cpu.rs  docker.rs  info.rs  log.rs  memory.rs  mod.rs
src/gui/state/docker/: container.rs  mod.rs  version.rs
src/gui/state/info/: cpu.rs  disk.rs  memory.rs  mod.rs
src/gui/state/info/docker/: container.rs  mod.rs  version.rs
src/gui/ui/: compose.rs  docker.rs  info.rs  mod.rs
src/lib/: mod.rs
src/lib/state/: mod.rs
src/lib/state/docker/: container.rs  version.rs
src/lib/state/info/: mod.rs
src/lib/state/info/docker/: container.rs  mod.rs
src/server/: compose.rs  config.rs  docker.rs  main.rs  memory.rs  subscriber.rs  system.rs
src/server/docker/: container.rs  image.rs  mod.rs  version.rs
src/server/info/: mod.rs
src/server/service/: compose.rs  docker.rs  mod.rs  system.rs
src/server/subscriber/: mod.rs  relay.rs
