[package]
name = "manager-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "gui"
path = "src/gui/main.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hyperlocal = "0.9.1"
hyper = { version = "1.5.1", features = ["client"] }
hyper-util = { version = "0.1.10", features = ["client"] }
http-body-util = "0.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.94"
egui = "0.29.1"
eframe = "0.29.1"
procfs = "0.17.0"
humansize = "2.1.3"
futures = "0.3.31"
chrono-humanize = "0.2.3"
chrono = "0.4.38"
tokio-util = "0.7.13"

[build-dependencies]
tonic-build = "*"
